adding customer service changes